# crowbar

./: Cargo.toml  README.md
.github/workflows/: build.yml
docs/: .$crowbar.drawio.bkp  crowbar.drawio  state.md
src/: action_item.rs  action_list.rs  action_list_view.rs  ai.rs  app_finder.rs  commands.rs  common.rs  config.rs  conversation.rs  copilot.rs  database.rs  desktop_entry_categories.rs  executable_finder.rs  main.rs  text_input.rs  urls.rs
src/actions/: action_factory.rs  action_handler.rs  action_ids.rs  action_item.rs  action_list.rs  app_handler.rs  bin_handler.rs  desktop.rs  dynamic.rs  mod.rs  registry.rs  scanner.rs  shell.rs  url_handler.rs
src/actions/handlers/: app_handler.rs  bin_handler.rs  browser_history_handler.rs  duckduckgo_handler.rs  executable_handler.rs  google_handler.rs  mod.rs  perplexity_handler.rs  url_handler.rs  yandex_handler.rs
src/database/: mod.rs  models.rs  schema.rs
src/system/: app_finder.rs  mod.rs
