[package]
name = "crowbar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crowbar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json =  "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
unicode-segmentation = "1.12.0"

gpui = { git = "https://github.com/zed-industries/zed" }
toml = "0.8.19"
rusqlite = "0.33.0"
chrono = "0.4.39"
strsim = "0.11.1"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "s"
lto = true


