[package]
name = "crowbar"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "crowbar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json =  "1.0.134"

gpui = { git = "https://github.com/zed-industries/zed" }
toml = "0.8.19"
rusqlite = "0.33.0"
chrono = "0.4.39"
strsim = "0.11.1"
unicode-segmentation = "1.12.0"
shlex = "1.3.0"
url = "2.5.4"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1


