[package]
name = "crowbar"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "crowbar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
serde_json =  "1.0.134"
urlencoding = "2.1.3"
gpui = { git = "https://github.com/zed-industries/zed" }
toml = "0.8.19"
rusqlite = {version = "0.33.0"}
chrono = "0.4.39"
unicode-segmentation = "1.12.0"
shlex = "1.3.0"
url = "2.4"
open = "5.0"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
# opt-level = "z"
opt-level = 2
lto = "fat" 
panic = "abort"
codegen-units = 1

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=+crt-static"]
